welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:8: error: not found: value minimum
    if (element < minimum){
                  ^